# sc-digital-contagion-simulator

./: .gitignore  LFR_1000_baseline_metrics.json  LFR_1000_burnout_metrics.json  LFR_1000_edges.csv  LFR_1000_influencers.json  LFR_1000_influencers_5pct.json  LFR_1000_intervention_metrics.json  LFR_1000_network.graphml  LFR_1000_network_metrics.json  LFR_1000_simulation_intervention_5pct.csv  LFR_100_baseline_metrics.json  LFR_100_burnout_metrics.json  LFR_100_edges.csv  LFR_100_influencers.json  LFR_100_intervention_metrics.json  LFR_100_network.graphml  LFR_100_nodes.csv  LFR_100_simulation_baseline.csv  LFR_100_simulation_intervention.csv  LFR_100_specification.txt  README.md  context.html  context.md  final_report.html  final_report_printable.html  generate_scenario_graphs.py  handout.md  handout_printable.html  handout_printable.md  interestingFacts.md  main.py  poster.html  poster.md  presentation_script.html  presentation_script.md  pyproject.toml  report.md  research_report.html
analysis/: agent_cohort.csv  agent_cohort.json  agent_factory_specification.txt  influencers.json  metrics_baseline_all_runs.csv  metrics_intervention_all_runs.csv  network_edges.csv  network_metrics.json  network_topology_specification.txt  persona_definitions.json  persona_definitions.txt  profiling_report.txt  scenario_comparison.json  scenario_report.txt  simulation_baseline.csv  simulation_baseline_metrics.json  simulation_baseline_run1.csv  simulation_baseline_run2.csv  simulation_baseline_run3.csv  simulation_baseline_run4.csv  simulation_intervention_run0.csv  (+6 more)
plan/: build_plan.md  (+2 more)
(+100 files in other folders)
